i installed and initialized uuidv4

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -21,10 +21,14 @@
 .icon{
   padding-top: 10px;
   color: red;
+  cursor: pointer;
 }
 .content{
   display: flex;
 }
 .content img{
   margin: 5px 20px 0 0;
+}
+.id{
+  display: none;
 }
